# israel_tree_removal_permit_scraper

./: .gitmodules  README.md  doc_fields.py  doc_parser.py  doc_urls.txt  docs_name_parser.py  fix_xlsx.py  get_available_docs.py  pyproject.toml  retrieve_docs.py  run.py  settings.py  text_exporter.py
