[tool.poetry]
name = "israel_tree_permit_scraper"
version = "0.1.0"
description = ""
authors = ["Udi Oron <udioron@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.1"
openpyxl = "^3.0.6"
xlrd = "^2.0.1"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
